# mailspoof

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  todo.txt
mailspoof/: __init__.py  cli.py  exceptions.py  issues.py  scanners.py
tests/: dmarcscan_test.py  txtfetch_test.py
